[metadata]
name = plotly3d-examples-python
version = 0.1.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = Simple 3D plots with Plotly offline/free.
url = https://github.com/scivision/plotly3d-examples-python
keywords =
  plot
  data science
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Developers
  Intended Audience :: Education
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Multimedia :: Graphics :: Presentation
  Topic :: Multimedia :: Video :: Display
  Topic :: Scientific/Engineering :: Visualization
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
include_package_data = True
packages = find:
install_requires =
  numpy
  plotly

[options.extras_require]
tests =
  pytest
  pytest-cov
  flake8
  mypy
